chapter-6/yaml/jsh-api-v2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jsh-api-v2
    version: v2
  name: jsh-api-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jsh-api
      version: v2
  template:
    metadata:
      labels:
        app: jsh-api
        version: v2
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - jsh-api
              topologyKey: "kubernetes.io/hostname"
      containers:
      - env:
        - name: DB_HOST
          value: jsh-mysql
        - name: DB_PASSWD
          value: password
        - name: DB_PORT
          value: "3306"
        - name: DB_USER
          value: root
        - name: JARNAME
          value: jshERP.jar
        - name: REDIS_HOST
          value: jsh-redis
        - name: REDIS_PORT
          value: "6379"
        image: 10.0.1.125:5000/library/kaniko:99e6656
        imagePullPolicy: ""
        name: jsh-api
        ports:
        - containerPort: 9999
        livenessProbe:
          tcpSocket:
            port: 9999
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 9999
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: 1500m
            memory: 1000Mi
          requests:
            cpu: 300m
            memory: 500Mi
      restartPolicy: Always
