chapter-6/yaml/jsh-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jsh-web
    version: v1
  name: jsh-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jsh-web
      version: v1
  template:
    metadata:
      labels:
        app: jsh-web
        version: v1
    spec:
      containers:
      - image: 10.0.1.104:5000/jsh/jsh-page:kit
        imagePullPolicy: ""
        name: jsh-web
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
