chapter-6/yaml/jsh-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jsh-web
  name: jsh-web
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: jsh-web
  type: NodePort
