chapter-6/yaml/metallb-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-metallb-test
  namespace: default
spec:
  selector:
    matchLabels:
      app: nginx-metallb-test
  template:
    metadata:
      labels:
        app: nginx-metallb-test
    spec:
      containers:
        - name: nginx
          image: nginx:1.8
          ports:
            - name: http
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx-metallb-test
  type: LoadBalancer
