chapter-6/yaml/jsh-ssl-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: jsh-seorui
  namespace: default
spec:
  hosts:
    - seorui.com
  gateways:
    - seorui-gateway
  http:
    - match:
        - uri:
            prefix: /jshERP-boot
      route:
        - destination:
            host: jsh-api
            port:
              number: 9999
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jsh-web
            subset: v1
          weight: 100
