chapter-6/yaml/jsh-vs-api-login-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jsh
  namespace: default
spec:
  hosts:
    - "cia.com"
  gateways:
    - bookinfo-gateway
  http:
    - match:
        - headers:
            X-Access-Token:
              regex: "^.*_.*$"
      route:
        - destination:
            host: jsh-api
            subset: v2
    - match:
        - uri:
            prefix: /jshERP-boot
      route:
        - destination:
            host: jsh-api
            subset: v1
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jsh-web
            subset: v1
          weight: 90
        - destination:
            host: jsh-web
            subset: v2
          weight: 10
