chapter-6/yaml/jsh-vs-web-user-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jsh
  namespace: default
spec:
  hosts:
    - "cia.com"
  gateways:
    - bookinfo-gateway
  http:
    - match:
        - uri:
            prefix: /jshERP-boot
      route:
        - destination:
            host: jsh-api
    - match:
        - headers:
             virtual-user:
              prefix: j
      fault:
        delay:
          fixedDelay: 1s
          percentage:
            value: 50
      route:
        - destination:
            host: jsh-web
            subset: v2
    - match:
        - headers:
             virtual-user:
              prefix: a
      fault:
        abort:
          httpStatus: 500
          percentage:
            value: 80
      route:
        - destination:
            host: jsh-web
            subset: v2
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jsh-web
            subset: v1
            port:
              number: 80
