chapter-6/yaml/jsh-vs-web-user-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jsh
  namespace: default
spec:
  hosts:
    - "cia.com"
  gateways:
    - bookinfo-gateway
  http:
    - match:
        - uri:
            prefix: /jshERP-boot
      route:
        - destination:
            host: jsh-api
    - match:
        - headers:
             virtual-user:
              prefix: j
      route:
        - destination:
            host: jsh-web
            subset: v2
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jsh-web
            subset: v1
            port:
              number: 80
