chapter-6/yaml/jsh-vs-web-v1-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jsh
spec:
  hosts:
    - "cia.com"
  gateways:
    - bookinfo-gateway
  http:
    - match:
        - uri:
            prefix: /jshERP-boot
      route:
        - destination:
            host: jsh-api
            port:
              number: 9999
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jsh-web
            subset: v1
          weight: 100
      mirror:
        host: jsh-web
        subset: v2
      mirrorPercentage:
        value: 10
