chapter-6/yaml/jsh-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jsh
  namespace: default
spec:
  hosts:
    - "cia.com"
  gateways:
    - bookinfo-gateway
  http:
    - match:
        - uri:
            prefix: /jshERP-boot
      route:
        - destination:
            host: jsh-api
            port:
              number: 9999
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jsh-web
            port:
              number: 80
