chapter-6/yaml/sample-egress-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-httpbin
spec:
  host: httpbin-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: httpbin-ext
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      http:
        maxRequestsPerConnection: 5
        http1MaxPendingRequests: 5
        maxRetries: 3
